deployment-strategies/bluegreen-with-istio/blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      version: v1
      app: tetris
  template:
    metadata:
      labels:
        version: v1
        app: tetris
    spec:
      containers:
        - name: cont1
          image: shaikmustafa/mytetrisgame:v1
          ports:
            - containerPort: 3000
