deployment-strategies/bluegreen-with-istio/blue-green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  selector:
    app: tetris
  ports:
    - port: 80
      targetPort: 3000
